--- a/CustomerOrderApi/appsettings.json
+++ b/CustomerOrderApi/appsettings.json
@@ -13,5 +13,8 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
+    "Redis": {
+        "ConnectionString": "localhost:6379"
+    },
     "AllowedHosts": "*"
 }
