--- a/CustomerOrders.Application/CustomerOrders.Application.csproj
+++ b/CustomerOrders.Application/CustomerOrders.Application.csproj
@@ -8,6 +8,8 @@
     <PackageReference Include="FluentValidation" Version="11.11.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
+	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+	  <PackageReference Include="StackExchange.Redis" Version="2.8.31" />
   </ItemGroup>
 
   <PropertyGroup>
