feature: integrate rabbitmq

--- a/CustomerOrderApi/appsettings.json
+++ b/CustomerOrderApi/appsettings.json
@@ -16,5 +16,10 @@
     "Redis": {
         "ConnectionString": "localhost:6379"
     },
+    "RabbitMQ": {
+        "Host": "localhost",
+        "QueueName": "order_notifications",
+        "Port": "5672"
+    },
     "AllowedHosts": "*"
 }
