--- a/CustomerOrderApi/CustomerOrderApi.csproj
+++ b/CustomerOrderApi/CustomerOrderApi.csproj
@@ -21,6 +21,7 @@
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
 		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
+		<PackageReference Include="RabbitMQ.Client" Version="6.2.1" />
 		<PackageReference Include="StackExchange.Redis" Version="2.8.31" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
 		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.1" />
