--- a/CustomerOrders.Application/CustomerOrders.Application.csproj
+++ b/CustomerOrders.Application/CustomerOrders.Application.csproj
@@ -9,6 +9,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
 	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+	  <PackageReference Include="RabbitMQ.Client" Version="6.2.1" />
+
 	  <PackageReference Include="StackExchange.Redis" Version="2.8.31" />
   </ItemGroup>
 
