--- a/CustomerOrders.Infrastructure/CustomerOrders.Infrastructure.csproj
+++ b/CustomerOrders.Infrastructure/CustomerOrders.Infrastructure.csproj
@@ -7,6 +7,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.4">
 			<PrivateAssets>all</PrivateAssets>
@@ -20,6 +21,5 @@
 	<ItemGroup>
 	  <Folder Include="Migrations\" />
 		<ProjectReference Include="..\CustomerOrders.Core\CustomerOrders.Core.csproj" />
-		<ProjectReference Include="..\CustomerOrders.Application\CustomerOrders.Application.csproj" />
 	</ItemGroup>
 </Project>
