--- a/CustomerOrderApi/appsettings.json
+++ b/CustomerOrderApi/appsettings.json
@@ -18,7 +18,7 @@
     },
     "RabbitMQ": {
         "Host": "localhost",
-        "QueueName": "order_notifications",
+        "QueueName": "customer_order_notifications",
         "Port": "5672"
     },
     "AllowedHosts": "*"
